tests/tooling/fixtures/native/recovery/negative/negative_if_call_unknown_else_missing_return_conservative_reject.objc3
// Negative fixture: unresolved if-condition branch-selection remains conservative in function return-path analysis.
// Expected diagnostic code(s): O3S205.
module NegativeIfCallUnknownElseMissingReturnConservativeReject;

fn predicate() -> i32 {
  return 1;
}

fn main() -> i32 {
  if (predicate()) {
    return 42;
  } else {
    let fallback = 7;
  }
}
